--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation "com.holdenkarau:spark-testing-base_2.11:2.4.3_0.12.0"
     implementation "com.zeotap:cloud-storage-utils:1.0.0"
     implementation "com.zeotap:data-io_2.11:1.0-SNAPSHOT"
+    implementation "com.zeotap:data-expectations_2.11:1.1-SNAPSHOT"
     implementation "mysql:mysql-connector-java:8.0.26"
     implementation "org.apache.commons:commons-text:1.6"
     implementation "org.apache.spark:spark-avro_2.11:2.4.3"
