Add Circle CI cache versioning

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - checkout
 
       - restore_cache:
-          key: source-{{ checksum "build.sbt" }}
+          key: source-{{ .Environment.CACHE_VERSION }}-{{ checksum "build.sbt" }}
 
       - run:
           name: Setup SBT
@@ -32,7 +32,7 @@ jobs:
             - ~/.sbt
             - ~/.m2/repository
             - ~/.ivy2
-          key: source-{{ checksum "build.sbt" }}
+          key: source-{{ .Environment.CACHE_VERSION }}-{{ checksum "build.sbt" }}
 
   release:
 
@@ -56,7 +56,7 @@ jobs:
             git config user.name "Release Script"
             git config user.email "builds@zeotap.com"
       - restore_cache:
-          key: source-{{ checksum "build.sbt" }}
+          key: source-{{ .Environment.CACHE_VERSION }}-{{ checksum "build.sbt" }}
 
       - run:
           name: Setup SBT
@@ -88,7 +88,7 @@ jobs:
             - ~/.sbt
             - ~/.m2/repository
             - ~/.ivy2
-          key: source-{{ checksum "build.sbt" }}
+          key: source-{{ .Environment.CACHE_VERSION }}-{{ checksum "build.sbt" }}
 
   buildonly:
 
@@ -103,7 +103,7 @@ jobs:
       - checkout
 
       - restore_cache:
-          key: source-{{ checksum "build.sbt" }}
+          key: source-{{ .Environment.CACHE_VERSION }}-{{ checksum "build.sbt" }}
 
       - run:
           name: Setup SBT
@@ -122,7 +122,7 @@ jobs:
             - ~/.sbt
             - ~/.m2/repository
             - ~/.ivy2
-          key: source-{{ checksum "build.sbt" }}
+          key: source-{{ .Environment.CACHE_VERSION }}-{{ checksum "build.sbt" }}
 
 workflows:
   version: 2
