--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,11 @@ jobs:
           command: |
             sudo update-alternatives --set java /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java
             java -version
-            sbt clean test publish
+            for sparkVersion in 3.0.1 3.1.2 3.3.1 3.4.1 3.5.0
+            do
+              export SPARK_VERSION=$sparkVersion
+              sbt clean test publish
+            done
       - save_cache:
           paths:
             - ~/.sbt
@@ -83,7 +87,11 @@ jobs:
               git reset --hard HEAD~1
               git push origin master --tags
             else
-              sbt clean test publish
+              for sparkVersion in 3.0.1 3.1.2 3.3.1 3.4.1 3.5.0
+              do
+                export SPARK_VERSION=$sparkVersion
+                sbt clean test publish
+              done
             fi
       - save_cache:
           paths:
@@ -118,7 +126,11 @@ jobs:
       - run:
           name: Package the Jar
           command: |
-            sbt clean test package
+            for sparkVersion in 3.0.1 3.1.2 3.3.1 3.4.1 3.5.0
+            do
+              export SPARK_VERSION=$sparkVersion
+              sbt clean test package
+            done
       - save_cache:
           paths:
             - ~/.sbt
@@ -134,7 +146,7 @@ workflows:
           context: Q3-2020
           filters:
             branches:
-              only: /^(development|zeotap-development|zeotap-development-shoubhik)$/
+              only: /^(development|zeotap-development)$/
       - release:
           context: Q3-2020
           filters:
@@ -144,4 +156,4 @@ workflows:
           context: Q3-2020
           filters:
             branches:
-              ignore: /^(development|master|zeotap-development|zeotap-development-shoubhik)$/
+              ignore: /^(development|master|zeotap-development)$/
